# REIT-Carrito

rose_models_v2/: CMakeLists.txt  package.xml
rose_models_v2/launch/: carritov2.launch  carritov3.launch  ur3_upload.launch
rose_models_v2/models/cable/: model.config  model.sdf
rose_models_v2/models/labrob_ground/: model.sdf
rose_models_v2/models/labrob_ground/materials/scripts/: asphalt.material
rose_models_v2/models/separador/: model.config  model.sdf
rose_models_v2/models/separador_stl/: model.config  model.sdf
rose_models_v2/models/separador_stl/meshes/: Separador.STL  separador.dae
rose_models_v2/urdf/: carritov2.urdf  carritov3.urdf  carritov4.urdf  carritov5.urdf  carritov6.urdf
t_ground_air_env/launch/: envV1.launch
t_ground_air_env/models/cupula/: model.config  model.sdf
t_ground_air_env/models/cupula/meshes/: Cupula.stl
t_ground_air_env/models/sphere_green_14/: model.config  model.sdf
t_ground_air_env/models/unit_box_blue/: model.config  model.sdf
t_ground_air_env/models/unit_box_red/: model.sdf
t_ground_air_env/world/: envV10.world  envV9.world
universal_robot/ur_description/launch/: ur3_upload2.launch  ur5_upload.launch
universal_robot/ur_description/urdf/: ur3_2.urdf.xacro  ur3_robot.urdf.xacro  ur3_robot2.urdf.xacro  ur5_robot.urdf.xacro
universal_robot/ur_gazebo/launch/: ur3.launch
ur3atornillador/: CMakeLists.txt  package.xml
ur3atornillador/launch/: display.launch
ur3atornillador/urdf/: pinzaAtornillador.urdf
urdf_tutorial-master/launch/: display.launch
